# sempa

./: .env.example  .env.local.example  .env.local.sync-conflict-20260603-151854-TVCDIHL.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.sync-conflict-20260603-151712-TVCDIHL.yml  docker-compose.yml  google-services.json  install.sh  install.sync-conflict-20260603-151712-TVCDIHL.sh  screen.html
.github/: dependabot.yml  zizmor.yml
.github/workflows/: android-release.yml  android.yml  scorecard.yml  security.yml  tag-release.yml  windows-release.yml
.stfolder/: syncthing-folder-38a2ad.txt  syncthing-folder-e0bcad.txt
backend/: Makefile  go.mod  go.sum  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/api/: attachments.go  auth.go  backup.go  backup_drive.go  caldav.go  daily_plans.go  devices.go  events.go  ical.go  integrations.go  objectives.go  pomodoro.go  respond.go  router.go  search.go  setup.go  sync.go  (+4 more)
deploy/: aura.service  install.sh  update.sh
docs/: UPDATER.md
frontend/: .env.production  Dockerfile.frontend  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/android/: build-output.txt  build.gradle
frontend/scripts/: verify-dom.mjs  verify-sheet.mjs
frontend/src/: app.css  app.html  themes.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  db.rs  lib.rs  sync.rs  tray.rs  windows.rs
frontend/static/: manifest.json
(+169 files in other folders)
